<resources>
    <string name="app_name">Calculator_GB</string>
    <string name="ac">AC</string>
    <string name="plusOrMinus">+/-</string>
    <string name="Procent">%</string>
    <string name="chertochka">/</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="x">X</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="doth">,</string>
    <string name="summ">=</string>
    <string name="vertical_ellipsis">&#8942;</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="BT_change_theme">Сменить тему в первом активити</string>
    <string name="BT_return_old_theme">Верунть все как было</string>
</resources>